# laia-taxi_trip

./: .gitignore  Dataset.dvc  Dockerfile.flask  Dockerfile.mlflow  README.md  README.txt  Versioning.txt  app.py  data_subset.py  docker-compose.yml  mlflow-entrypoint.sh  pyproject.toml  requirements.txt  train - Cópia.py  train.py
.dvc/: config
.github/workflows/: 1_continuous_integration.yml  2_continuous_delivery.yml  client.ovpn
deploy/: deploy.sh
mlflow/: mlflow.db
mlflow/mlruns/models/m-6647a3bd410847c19db9784c9e8b56df/artifacts/: MLmodel  model.pkl
mlflow/mlruns/models/m-7c292fe32c6e462693f4fedb01f043fa/artifacts/: MLmodel  model.pkl
mlflow/mlruns/models/m-fd66744dd67b41f49a35ebd44d6bd2f1/artifacts/: MLmodel  model.pkl
model-promotion/: promote_model.py
serving/: Dockerfile.flask  app.py
tests/: test_api.py
training/: Dockerfile  requirements.txt  train_model.py
